--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Calories Calculator</title>
     </head>
     <body>
         <form id="form" action="">
@@ -13,68 +13,113 @@
             <p>Your age, years?</p>
             <input type="text" name="age">
             <p>Your gender?</p>
-            <label for=""><input type="radio" name="gender" value="male">male</label>
-            <label for=""><input type="radio" name="gender" value="female">female</label>
+            <div id="gender"></div>
             <p>Your level of physical activity?</p>
-            <label for=""><input type="radio" name="load_level" value="minimum">minimum</label>
-            <label for=""><input type="radio" name="load_level" value="light">light</label>
-            <label for=""><input type="radio" name="load_level" value="middle">middle</label>
-            <label for=""><input type="radio" name="load_level" value="high">high</label>
-            <label for=""><input type="radio" name="load_level" value="extreme">extreme</label>
+            <div id="load_level"></div>
             <br>
             <input type="submit">
         </form>
+        <div id="result"></div>
+        <div id="errors"></div>
         <script>
-        let form = document.getElementById('form');
-        
-        form.addEventListener('submit', function(e){
-            e.preventDefault();
-
-            let errors = [];
-            let weight = form.querySelector('input[name="weight"]');
-            let height = form.querySelector('input[name="height"]');
-            let age = form.querySelector('input[name="age"]');
-            let gender = form.querySelector('input[name="gender"]:checked');
-            let load_level = form.querySelector('input[name="load_level"]:checked');
-            let weight_value = weight.value.trim();
-            let height_value = height.value.trim();
-            let age_value = age.value.trim();
-            let gender_value;
-            let load_level_value;
-
-            // checking weight
-            if ( weight_value == "" || isNaN(weight_value) ) {
-                errors.push('Input your weight.');
+            function setAttributes(obj, params)
+            {
+                for (let key in params) {
+                    obj.setAttribute(key, params[key]);
+                }
             }
 
-            // checking height
-            if (height_value == "" || isNaN(height_value)) {
-                errors.push('Input your height.');
+            function printRadioInputs(name, array, container_id)
+            {
+                let container = document.getElementById(container_id);
+                array.forEach(function(val){
+                    let label = document.createElement("label");
+                    let input = document.createElement("input");
+                    setAttributes(input, {'type':'radio', 'name':name, 'value':val});
+                    label.appendChild(input);
+                    label.append(val);
+                    container.appendChild(label);
+                })
             }
 
-            // checking age
-            if (age_value == "" || isNaN(age_value)) {
-                errors.push('Input your age.');
-            }
+            let form = document.getElementById('form');
+            let errors_container = document.getElementById('errors');
+            let result_container = document.getElementById('result');
+            var gender_add_to_WHY = {
+                'male': 5,
+                'female': -161
+            };
+            var loading_levels = {
+                'minimum': 1.2,
+                'light': 1.35,
+                'middle': 1.55,
+                'high': 1.75,
+                'extreme': 1.99,
+            };
 
-            // checking gender
-            if (gender === null) {
-                errors.push('Choose gender.');
-            }else{
-                gender_value = gender.value;
-            }
+            printRadioInputs('gender', Object.keys(gender_add_to_WHY), 'gender');
+            printRadioInputs('load_level', Object.keys(loading_levels), 'load_level');
+            
+            form.addEventListener('submit', function(e){
+                e.preventDefault();
 
-            // checking level of physical activity
-            if (load_level === null) {
-                errors.push('Choose your level of physical activity.');
-            }else{
-                load_level_value = load_level.value;
-            }
+                let errors = [];
+                let weight = form.querySelector('input[name="weight"]');
+                let height = form.querySelector('input[name="height"]');
+                let age = form.querySelector('input[name="age"]');
+                let gender = form.querySelector('input[name="gender"]:checked');
+                let load_level = form.querySelector('input[name="load_level"]:checked');
+                let weight_value = weight.value.trim();
+                let height_value = height.value.trim();
+                let age_value = age.value.trim();
+                let gender_value;
+                let load_level_value;
+                errors_container.innerHTML = '';
+                result_container.innerHTML = '';
 
-            // console.log(errors);
-            // console.log(form.querySelector('input[name="weight"]').value.trim());
-            // console.log(form.querySelector('input[name="gender"]:checked'));
-        });
+                // checking weight
+                if ( weight_value == "" || isNaN(weight_value) ) {
+                    errors.push('Input your weight.');
+                }
+
+                // checking height
+                if (height_value == "" || isNaN(height_value)) {
+                    errors.push('Input your height.');
+                }
+
+                // checking age
+                if (age_value == "" || isNaN(age_value)) {
+                    errors.push('Input your age.');
+                }
+
+                // checking gender
+                if (gender === null) {
+                    errors.push('Choose gender.');
+                }else{
+                    gender_value = gender.value;
+                }
+
+                // checking level of physical activity
+                if (load_level === null) {
+                    errors.push('Choose your level of physical activity.');
+                }else{
+                    load_level_value = load_level.value;
+                }
+
+                // writing errors
+                if (errors.length) {
+                    let errors_new_html = '<ul>';
+                    for (let i = 0; i < errors.length; i++) {
+                        errors_new_html += '<li>'+ errors[i]+'</li>';
+                    }
+                    errors_new_html += '</ul>';
+                    errors_container.innerHTML = errors_new_html;
+                }else{
+                    // calculating result
+                    let bmr = (9.99 * weight_value + 6.25 * height_value - 4.92 * age_value + gender_add_to_WHY[gender_value]) * loading_levels[load_level_value];
+                    result_container.innerHTML = 'Optimal calories level = ' + bmr;
+                }
+            });
         </script>
     </body>
 </html>
